Fix arrivals columns for STN and right align pax nos

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -847,6 +847,11 @@ p {
   margin-top: 0;
 }
 
+#arrivals .right {
+  text-align: right;
+  padding-right: 13px;
+}
+
 // Usage table
 
 .usage-table {
@@ -917,7 +922,10 @@ th h2 {
   color: black;
   font-weight: 400;
   //text-shadow: 0px 0px 4px white;
+}
 
+.pax-cell div {
+  padding-right: 5px;
 }
 
 .summary-box-container td {
